Fix css table vertical align

--- a/template/adminlte_custom/custom.css
+++ b/template/adminlte_custom/custom.css
@@ -3,14 +3,15 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
-    Created on : 18-apr-2018, 15.07.50
-    Author     : h2snc
-*/
+
 
 #search_form input[name="search"] {
     margin: 5px 0;
     
+}
+
+table {
+    vertical-align:middle;
 }
 
 /*
